--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
